<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kus.mydiabetes.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/lead_large"/>

        <!--Pengertian-->
        <android.support.v7.widget.CardView
            android:id="@+id/cardPengertian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:background="#e3f2fd"
                    android:src="@drawable/icon"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#e3f2fd"
                    android:text="@string/cardPengertian"
                    android:textSize="18dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--Gejala-->
        <android.support.v7.widget.CardView
            android:id="@+id/cardGejala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:background="#e3f2fd"
                    android:src="@drawable/icon"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#e3f2fd"
                    android:text="@string/cardGejala"
                    android:textSize="18dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--Tipe Diabetes-->
        <android.support.v7.widget.CardView
            android:id="@+id/cardTipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:background="#e3f2fd"
                    android:src="@drawable/icon"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#e3f2fd"
                    android:text="@string/cardTipeDiabetes"
                    android:textSize="18dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--Komplikasi-->
        <android.support.v7.widget.CardView
            android:id="@+id/cardKomplikasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:background="#e3f2fd"
                    android:src="@drawable/icon"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#e3f2fd"
                    android:text="@string/cardKomplikasi"
                    android:textSize="18dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--Pencegahan-->
        <android.support.v7.widget.CardView
            android:id="@+id/cardPencegahan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:background="#e3f2fd"
                    android:src="@drawable/icon"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#e3f2fd"
                    android:text="@string/cardPencegahan"
                    android:textSize="18dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--Kontrol-->
        <android.support.v7.widget.CardView
            android:id="@+id/cardKontrol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:background="#e3f2fd"
                    android:src="@drawable/icon"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#e3f2fd"
                    android:text="@string/cardKontrol"
                    android:textSize="18dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--Pengobatan-->
        <android.support.v7.widget.CardView
            android:id="@+id/cardPengobatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:background="#e3f2fd"
                    android:src="@drawable/icon"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#e3f2fd"
                    android:text="@string/cardPengobatan"
                    android:textSize="18dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
